css/style.css
:root {
  --background: #F3F6FB;
  --card: #FFFFFF;

  --surface: #E9EEF6;
  --surface-hover: #DCE6F4;

  --text: #111827;
  --text-dark: #1a1a1a;
  --text-light: #F8FAFC;
  --text-muted: #4B5563;

  --border: #D1D9E6;

  --shadow: 0 8px 20px rgba(0, 0, 0, .08);
  --glow: rgba(0, 0, 0, 0.04);

  /* Pokemon Type Colors */

  --type-bug: #a8b820;
  --type-dark: #705848;
  --type-dragon: #7038f8;
  --type-electric: #f8d030;

  --type-fairy: #f0b6bc;
  --type-fighting: #c03028;
  --type-fire: #f08030;

  --type-flying: #a890f0;
  --type-ghost: #705898;
  --type-grass: #78c850;

  --type-ground: #e0c068;
  --type-ice: #98d8d8;
  --type-normal: #a8a878;

  --type-poison: #a040a0;
  --type-psychic: #f85888;
  --type-rock: #b8a038;

  --type-steel: #b8b8d0;
  --type-water: #6890f0;
}

body.darkmode {
  --background: #0B1220;
  --card: #172033;

  --surface: #202C43;
  --surface-hover: #2C3B5A;

  --text: #F8FAFC;
  --text-dark: #1a1a1a;
  --text-muted: #B8C4D6;

  --border: #34435F;

  --shadow: 0 8px 20px rgba(0, 0, 0, .25);
  --glow: rgba(255, 255, 255, 0.04);
}


/* Reset */

*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 14px;
  font-family: "Inter", sans-serif;
}

/* MAIN APP */

body {
  display: flex;
  flex-direction: column;
  color: var(--text);
  min-height: 100vh;

  background-color: var(--background);
}

.header {
  margin: 20px auto 20px auto;
  padding: 0 1rem;
  width: 100%;
  max-width: 500px;
  font-size: 1.3rem;
  text-align: center;
}

.header p {
  font-size: 1rem;
}

#app {
  display: none;
  flex-direction: column;
  width: 100%;
  justify-content: center;
  max-width: 1700px;
  padding: 20px;
  margin: 0 auto;
  zoom: 80%;
}

#loading {
  margin-top: 30vh;
  display: block;
  text-align: center;
  font-size: 2rem;
}

.main {
  flex: 1;
  overflow: auto;
}

/* POKEMON team GRID */

.pokemon-team-display {
  display: grid;

  grid-template-columns: 1fr 1fr;
    
  gap: 14px;

  flex: 1 1 auto;

  max-width: 820px;
}

/* POKEMON CARD */

.pokemon-card {
  display: grid;

  grid-template-columns: 1fr 1fr;

  grid-template-areas:
    "name moves"
    "type moves"
    "image moves"
    "item ability";

  row-gap: 8px;
  column-gap: 12px;
  width: 100%;
  min-height: 280px;
  min-width: 0;
  padding: 12px;
  border-radius: 10px;

  border: 1px solid var(--border);
  box-shadow: var(--shadow);

  background-color: var(--card);
}

/* POKEMON CARD STYLES */

.pokemon-name {
  grid-area: name;
}

.pokemon-item {
  grid-area: item;
}

.pokemon-image {
  display: flex;
  justify-content: center;
  align-items: center;
  justify-self: center;

  min-width: 0;
  max-width: 130px;

  grid-area: image;

  min-height: 130px;
  overflow: hidden;

}

.pokemon-img {
  width: 96px;
  max-height: 130px;
  object-fit: contain;
  image-rendering: pixelated;
}

.moves {
  display: grid;
  grid-area: moves;
  gap: 10px;
  overflow: hidden;
}

.pokemon-ability {
  grid-area: ability;
}

/* INPUTS */

.item-select,
.move-select {
  max-width: none;
}

.pokemon-card select {
  width: 100%;
  min-width: 0px;
  height: 30px;
  border: 1px solid var(--border);

  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  background-color: var(--surface);

  font-size: 1.2rem;
  font-family: inherit;
  cursor: pointer;
  color: inherit;
  transition: background 0.2s ease;
}

.input-container {
  display: flex;
  width: 100%;
  margin-bottom: 14px;
  justify-content: flex-start;
  gap: 14px;
  flex-wrap: wrap;
}

.input-container > *:not(.theme-switch-wrapper) {
  font-size: 1.2rem;
  border: 1px solid var(--border);
  background-color: var(--surface);
  color: var(--text);
  transition: background 0.2s ease;
  cursor: pointer;
}

.input-container > *:not(.theme-switch-wrapper):hover {
  background-color: var(--surface-hover);
}

.input-container select {
  max-width: 120px;
  padding: 8px;
}

.input-container button {
  max-width: 90px;
  padding: 4px;
  border-radius: 15px;
}

.field {
  position: relative;
}

.pokemon-name {
  width: 100%;
}

.pokemon-card select:hover {
  background-color: var(--surface-hover);
}

.pokemon-card select:disabled {
  color: var(--text);
  opacity: 0.9;
  cursor: not-allowed;
}

/* JUST A LITTLE SOMETHING FOR ACESSIBILITY */

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
}

.field.pokemon-type {
  grid-area: type;
  display: flex;
  flex-wrap: nowrap;
  gap: 8px;
  justify-content: center;
}

.type {
  display: inline-block;
  padding: 4px 10px;
  border-radius: 999px;

  font-weight: 900;
  font-size: 0.8rem;
  letter-spacing: 1px;

  color: white;
  text-transform: uppercase;
  text-align: center;

  border: 2px solid rgba(0, 0, 0, 0.25);

  box-shadow:
    inset 0 2px 0 rgba(255, 255, 255, 0.35),
    inset 0 -2px 0 rgba(0, 0, 0, 0.15),
    0 2px 3px rgba(0, 0, 0, 0.25);
}

/* COLORS FOR MOVES AND TYPE BOXES */

.bug,
.move-select.bug {
  background: var(--type-bug);
  color: var(--text-dark);
}

.dark,
.move-select.dark {
  background: var(--type-dark);
  color: var(--text-light);
}

.dragon,
.move-select.dragon {
  background: var(--type-dragon);
  color: var(--text-light);
}

.electric,
.move-select.electric {
  background: var(--type-electric);
  color: var(--text-dark);
}

.fairy,
.move-select.fairy {
  background: var(--type-fairy);
  color: var(--text-dark);
}

.fighting,
.move-select.fighting {
  background: var(--type-fighting);
  color: var(--text-light);
}

.fire,
.move-select.fire {
  background: var(--type-fire);
  color: var(--text-dark);
}

.flying,
.move-select.flying {
  background: var(--type-flying);
  color: var(--text-dark);
}

.ghost,
.move-select.ghost {
  background: var(--type-ghost);
  color: var(--text-light);
}

.grass,
.move-select.grass {
  background: var(--type-grass);
  color: var(--text-dark);
}

.ground,
.move-select.ground {
  background: var(--type-ground);
  color: var(--text-dark);
}

.ice,
.move-select.ice {
  background: var(--type-ice);
  color: var(--text-dark);
}

.normal,
.move-select.normal {
  background: var(--type-normal);
  color: var(--text-dark);
}

.poison,
.move-select.poison {
  background: var(--type-poison);
  color: var(--text-light);
}

.psychic,
.move-select.psychic {
  background: var(--type-psychic);
  color: var(--text-light);
}

.rock,
.move-select.rock {
  background: var(--type-rock);
  color: var(--text-dark);
}

.steel,
.move-select.steel {
  background: var(--type-steel);
  color: var(--text-dark);
}

.water,
.move-select.water {
  background: var(--type-water);
  color: var(--text-dark);
}

.theme-switch {
  position: relative;
  display: inline-block;
  width: 46px;
  height: 24px;
}

.theme-switch-wrapper {
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 1rem;
  padding: 0 5px;
  flex-shrink: 0;
}

.theme-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  inset: 0;
  background-color: #cbd5e1;
  transition: 0.3s;
  border-radius: 999px;
}

.slider::before {
  content: "";
  position: absolute;
  height: 18px;
  width: 18px;
  left: 3px;
  top: 3px;
  background-color: white;
  transition: 0.3s;
  border-radius: 50%;
}

/* ON STATE */
.theme-switch input:checked+.slider {
  background-color: #334155;
}

.theme-switch input:checked+.slider::before {
  transform: translateX(24px);
}
/* TEAM DEFENCE */

.team-defence-panel {
  align-self: start;

  background: var(--card);
  border: 1px solid var(--border);
  border-radius: 10px;
  padding: 14px;
  box-shadow: var(--shadow);
}

.team-defence-panel h2 {
  text-align: center;
  margin-bottom: 12px;
}

#team-defence-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 8px;
}

.defence-type {
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: pointer;
}

.defence-label {
  width: 100%;
  text-align: center;
  padding: 4px;
  border-radius: 6px;
  font-size: 1rem;
  font-weight: 700;
}

.defence-value {
  margin-top: 2px;
  font-size: 1rem;
  font-weight: 700;
}

.defence-positive {
  color: #57d957;
}

.defence-negative {
  color: #ff4d4d;
}

.defence-neutral {
  color: var(--text);
}

.team-layout {
  display: flex;
  gap: 20px;
  max-width: 1700px;
  width: 100%;
  align-items: flex-start;
  justify-content: space-between;
}

.pokemon-stats-display {
  background-color: var(--card);
  border: 1px solid var(--border);
  padding: 14px;
  border-radius: 10px;
  box-shadow: var(--shadow);
  flex: 1;
  justify-content: center;
  max-width: 700px;
  text-align: center;
}

#team-defence-grid {
  margin-top: 10px;
  gap: 14px
}

@media (max-width: 1080px) {
  .team-layout {
    flex-direction: column;
  }

  .team-defence-panel {
    width: 100%;
    position: static;
  }

  .pokemon-team-display {
    grid-template-columns: repeat(2, 1fr);
    margin: 14px auto;
    max-width: 800px;
    width: 100%;
  }

  .pokemon-stats-display {
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
  }

  .input-container {
    max-width: 740px;
    margin: 0 auto;
  } 

  #app {
    zoom: 100%;
  }
}


@media (max-width: 750px) {
  .pokemon-team-display {
    width: 100%;
    max-width: 440px;
    grid-template-columns: 1fr;
    margin: 0 auto;
    padding: 0;
  }
  
  #app {
    zoom: 100%;
  }

  .pokemon-stats-display {
    max-width: 440px;
    margin: 0 auto;
    width: 100%;
  }

  .input-container {
    margin: 0 auto 14px auto;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    max-width: 450px;
    justify-items: center;
    align-items: center;
  }

  .input-container .button,
  .input-container select {
    font-size: 0.9rem;
    width: 100%;
    max-width: 100px;
  }

  .header {
    font-size: 1.5rem;
  }

  .button {
    min-height: 30px;
    padding: 5px;
  }
}

/* TOOLTIP */
#type-tooltip {
  position: fixed;
  background-color: var(--card);
  border: 1px solid var(--border);
  padding: 12px 16px;
  border-radius: 8px;
  box-shadow: var(--shadow);
  display: none;
  pointer-events: none;
  z-index: 1000;
  max-width: 350px;
  font-size: 0.85rem;
  color: var(--text);
  font-size: 1.2rem;
  transform: translateX(-50%);
}

.tooltip-pokemon-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 2;
  gap: 8px;
  flex-wrap: wrap;
}

.tooltip-pokemon-item {
  text-align: center;
  font-size: 1rem;
}

.tooltip-pokemon-sprite {
  width: 80px;
  height: 80px;
  image-rendering: pixelated;
}

